.metals/.reports/metals/2023-09-28/r_scala-toplevel-mtags_23-32-00-708
id: file://<WORKSPACE>/scala/hello.scala:[7..7) in Input.VirtualFile("file://<WORKSPACE>/scala/hello.scala", "object ")
file://<WORKSPACE>/scala/hello.scala:1: error: expected identifier; obtained eof
object 
       ^